--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,6 @@ quarkus:
 # ==============================================================================
 ssh:
   host: ${SSH_HOST}
-  port: ${SSH_PORT:22}
   user: ${SSH_USER}
   private-key: ${SSH_PRIVATE_KEY:private.key}
 
@@ -33,16 +32,12 @@ ssh:
 # CONFIGURAZIONE SINGLE TUNNEL (Attiva se multi-tunnel.enabled: false)
 # ==============================================================================
 tunnel:
-  host: ${TUNNEL_HOST:localhost}
-  port: ${TUNNEL_PORT:8080}
-  local-port: ${TUNNEL_LOCAL_PORT:12542}
+  host: ${TUNNEL_HOST}
+  port: ${TUNNEL_PORT}
 
 # ==============================================================================
 # CONFIGURAZIONE MULTI TUNNEL (Attiva se multi-tunnel.enabled: true)
 # ==============================================================================
 multi-tunnel:
   enabled: ${MULTI_TUNNEL_ENABLED:false}
-  # La lista dei tunnel viene solitamente fornita dal file esterno 
-  # caricato tramite MULTI_TUNNEL_CONF_PATH
-#  tunnels: []
 
