--- a/pom.xml
+++ b/pom.xml
@@ -138,10 +138,12 @@
                 <quarkus.native.enable-security-services>true</quarkus.native.enable-security-services>
                 <quarkus.index-dependency.jsch.group-id>com.github.mwiede</quarkus.index-dependency.jsch.group-id>
                 <quarkus.index-dependency.jsch.artifact-id>jsch</quarkus.index-dependency.jsch.artifact-id>
+                <quarkus.native.reflection.include-patterns>com.jcraft.jsch.**</quarkus.native.reflection.include-patterns>
                 <quarkus.native.additional-build-args>
                     --initialize-at-run-time=com.jcraft.jsch
                     --enable-all-security-services
                     --allow-incomplete-classpath
+                    -H:+UnlockExperimentalVMOptions
                 </quarkus.native.additional-build-args>
             </properties>
         </profile>
