--- a/pom.xml
+++ b/pom.xml
@@ -136,15 +136,8 @@
                 <skipITs>false</skipITs>
                 <quarkus.native.enabled>true</quarkus.native.enabled>
                 <quarkus.native.enable-security-services>true</quarkus.native.enable-security-services>
-                <quarkus.index-dependency.jsch.group-id>com.github.mwiede</quarkus.index-dependency.jsch.group-id>
-                <quarkus.index-dependency.jsch.artifact-id>jsch</quarkus.index-dependency.jsch.artifact-id>
                 <quarkus.native.reflection.include-patterns>com.jcraft.jsch.**</quarkus.native.reflection.include-patterns>
-                <quarkus.native.additional-build-args>
-                    --initialize-at-run-time=com.jcraft.jsch,java.net.Inet4Address,java.net.InetAddress
-                    --enable-all-security-services
-                    --allow-incomplete-classpath
-                    -H:+UnlockExperimentalVMOptions
-                </quarkus.native.additional-build-args>
+                <quarkus.native.additional-build-args>--initialize-at-run-time=java.net.Inet4Address,--initialize-at-run-time=com.jcraft.jsch.PortWatcher</quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
