--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -18,12 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up GraalVM (Java 21)
-        uses: graalvm/setup-graalvm@v1
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: 'graalvm'
-          github-token: ${{ github.token }}
+          distribution: 'temurin'
           cache: 'maven'
 
       - name: Make mvnw executable
