--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.83</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -140,6 +145,7 @@
                 <quarkus.native.enable-security-services>true</quarkus.native.enable-security-services>
 
                 <quarkus.native.additional-build-args>
+                    --initialize-at-run-time=org.bouncycastle
                     --initialize-at-run-time=sun.security.ec.SunEC
                     --initialize-at-run-time=sun.security.ec.CurveDB
                     --allow-incomplete-classpath
