--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,8 @@
                 <quarkus.native.additional-build-args>
                     --initialize-at-run-time=org.bouncycastle
                     --allow-incomplete-classpath
+                    -H:AdditionalSecurityProviders=org.bouncycastle.jce.provider.BouncyCastleProvider
+                    -H:+IncludeAllSecurityServices
                 </quarkus.native.additional-build-args>
             </properties>
         </profile>
